# goosebot

./: LICENSE  README.md  keep_alive.py  main.py  pyproject.toml
extensions/: info.py  valorant.py
