[tool.poetry]
name = "repl_python3_goosebot"
version = "0.1.0"
description = ""
authors = ["duckgoose0 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
aiohttp = "^3.8.1"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
